# snoopy

./: .gitignore  .releaserc  Cargo.toml  Dockerfile  LICENSE  README.md  renovate.json
.github/workflows/: build-and-push.yml
snoopy/: Cargo.toml  build.rs
snoopy-common/: Cargo.toml
snoopy-common/src/: lib.rs
snoopy-ebpf/: Cargo.toml
snoopy-ebpf/src/: main.rs
snoopy/src/: main.rs
