[workspace]
resolver = "2"
members = ["snoopy", "snoopy-ebpf"]
default-members = ["snoopy"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
clap = { version = "4.5.37", features = ["derive"] }
env_logger = { version = "0.11.8", default-features = false }
libc = { version = "0.2.172", default-features = false }
log = { version = "0.4.27", default-features = false }
tokio = { version = "1.44.2", default-features = false }
which = { version = "7.0.3", default-features = false }
pnet = { version = "0.35.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[profile.release.package.snoopy-ebpf]
debug = 2
codegen-units = 1

# [profile.release]
# lto = true
# panic = "abort"

# [profile.release.package.snoopy]
# codegen-units = 1
# opt-level = "z"
# strip = "symbols"
