[workspace]
resolver = "2"
members = ["snoopy", "snoopy-ebpf"]
default-members = ["snoopy"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
anyhow = { version = "1.0.98", default-features = false }
clap = { version = "4.5.40", features = ["derive"] }
env_logger = { version = "0.11.8", default-features = false }
libc = { version = "0.2.174", default-features = false }
log = { version = "0.4.27", default-features = false }
tokio = { version = "1.45.1", default-features = false }
which = { version = "8.0.0", features=["real-sys"], default-features = false }

[profile.release.package.snoopy-ebpf]
debug = 2
codegen-units = 1
