[workspace]
resolver = "2"
members = ["snoopy", "snoopy-ebpf"]
default-members = ["snoopy"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.100" }
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.3", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.0", default-features = false }
cargo_metadata = { version = "0.23.1", default-features = false }
log = { version = "0.4.28", default-features = false }
which = { version = "8.0.0", features=["real-sys"], default-features = false }

[profile.release.package.snoopy-ebpf]
debug = 2
codegen-units = 1
