[package]
name = "snoopy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true, default-features = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
pnet = { version = "0.35.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
human_bytes = "0.4.3"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
snoopy-ebpf = { path = "../snoopy-ebpf" }

[[bin]]
name = "snoopy"
path = "src/main.rs"
