[package]
name = "snoopy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
aya = { workspace = true }
aya-log = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
env_logger = { version = "0.11.8", default-features = false }
human_bytes = "0.4.3"
libc = { version = "0.2.174", default-features = false }
log = { workspace = true }
pnet = { version = "0.35.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
tokio = { version = "1.45.1", features = ["full"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
snoopy-ebpf = { path = "../snoopy-ebpf" }

[[bin]]
name = "snoopy"
path = "src/main.rs"
